# pytest-output

./: pyproject.toml  pytest.ini  readme.md  requirements.txt  tox.ini
_test/: polarion.yaml  run-betelgeuse.sh  run-plugin.sh
_test/data/: betelgeuse-test-cases.xml  betelgeuse-test-run.xml  export_testcase.xml  export_testrun.xml  import.py  junit.xml  testcase.xml  testrun.xml
_test/tests/: test_basic.py
docs/: api.rst  conf.py  index.rst  outputs.rst  requirements.txt
docs/outputs/: polarion.rst  yaml.rst
pytest_output/: __init__.py  actions.py  hooks.py  output.py
pytest_output/outputs/: polarion.py  yaml.py
tests/: conftest.py  test_init.py  test_output_data_item.py  test_outputs_polarion.py
tests/data/test_outputs_polarion/test_outputs_polarion__cli_create_defects/: expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_dry_run/: expected_testcase.xml  expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_include_skipped/: expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_lookup_method__custom/: expected_testcase.xml  expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_lookup_method__id/: expected_testcase.xml  expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_project/: expected_testcase.xml  expected_testrun.xml
tests/data/test_outputs_polarion/test_outputs_polarion__cli_project_span_ids/: expected_testrun.xml
(+45 files in other folders)
